Fix Overflow

--- a/src/scss/field.scss
+++ b/src/scss/field.scss
@@ -11,9 +11,9 @@ html, body, #gui {
 
 #side-bar, #inspector {
     width: 100%;
-    height: 100%;
-    background-color: lightgrey;
     height: 100vh;
+    background-color: lightgrey;
+    overflow: scroll;
 }
 
 #side-bar {
@@ -131,7 +131,7 @@ html, body, #gui {
             }
 
             input, select {
-                height: 50px;
+                height: 5vh;
                 width: 100px;
             }
     
